...
    <RelativeLayout

        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="guardarCambios"
            android:layout_alignParentBottom="true"
            android:text="Guardar cambios" />
        <include
            layout="@layout/content_editar_cancion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/button2"/>

...
